--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ bind C-l resize-pane -R
 set -g status-bg colour235
 set -g status-left-fg colour239
 set -g status-left-length 30
-set -g status-left '#[bg=colour234,fg=colour239] #(whoami)@#H #[default]'
+set -g status-left '#[bg=colour234,fg=colour239] [#S] #(whoami)@#H #[default]'
 
 # Window status bars
 set -g window-status-current-format '#[fg=white,bg=colour239,noreverse,bold] #I : #W '
