Updated .tmux.conf to add title

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,11 +30,15 @@ bind C-j resize-pane -D
 bind C-k resize-pane -U
 bind C-l resize-pane -R
 
-# Left status bar
-set -g status-bg colour235
-set -g status-left-fg colour239
-set -g status-left-length 30
-set -g status-left '#[bg=colour234,fg=colour239] [#S] #(whoami)@#H #[default]'
+ #Title bar
+ set-option -g set-titles on
+ set-option -g set-titles-string "#(whoami)@#H [#S-#I-#P] #W - #T"
+
+ # Left status bar
+ set -g status-bg colour235
+ set -g status-left-fg colour239
+ set -g status-left-length 30
+ set -g status-left '#[bg=colour234,fg=colour239] #(whoami)@#H [#S-#I-#P] #[default]'
 
 # Window status bars
 set -g window-status-current-format '#[fg=white,bg=colour239,noreverse,bold] #I : #W '
