--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,5 +60,5 @@ set -g pane-active-border-fg colour239
 set -g automatic-rename off
 
 # set up alias for turning on logging
-bind H pipe-pane 'exec cat >>~/tmux-#W.log' \; display-message "Toggled logging to ~/tmux-#W.log"
-bind h pipe-pane \; display-message 'Ended logging to $HOME/tmux-#W.log'
+bind P pipe-pane 'exec cat >>~/tmux-#W.log' \; display-message "Toggled logging to ~/tmux-#W.log"
+bind p pipe-pane \; display-message 'Ended logging to $HOME/tmux-#W.log'
